crates/parser/src/tests/snapshots/kcl_parser__tests__types__basic_type_3.snap
---
source: crates/parser/src/tests/types.rs
expression: "$crate :: tests :: parsing_type_string(r####\"str\"####)"
---
Node {
    node: Basic(
        Str,
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 3,
}
