crates/parser/src/tests/snapshots/kcl_parser__tests__types__dict_type_1.snap
---
source: crates/parser/src/tests/types.rs
expression: "$crate :: tests :: parsing_type_string(r####\"{str:}\"####)"
---
Node {
    node: Dict(
        DictType {
            key_type: Some(
                Node {
                    node: Basic(
                        Str,
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 4,
                },
            ),
            value_type: None,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}
