crates/parser/src/tests/snapshots/kcl_parser__tests__types__list_type_0.snap
---
source: crates/parser/src/tests/types.rs
expression: "$crate :: tests :: parsing_type_string(r####\"[]\"####)"
---
Node {
    node: List(
        ListType {
            inner_type: None,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}
