crates/parser/src/tests/snapshots/kcl_parser__tests__types__list_type_1.snap
---
source: crates/parser/src/tests/types.rs
expression: "$crate :: tests :: parsing_type_string(r####\"[int]\"####)"
---
Node {
    node: List(
        ListType {
            inner_type: Some(
                Node {
                    node: Basic(
                        Int,
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 4,
                },
            ),
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 5,
}
